fixed some code analysis recommendations